css/style.css
/*
white = #FFFFFF
*/

/* global styles */


/* apply a natural box layout model to all elements, but allowing components to change */
html {
  box-sizing: border-box;
  height: 100%;
}
*, *:before, *:after {
  box-sizing: inherit;
}

.clearfix::after {
  content: "";
  clear: both;
  display: table;
}

.clear {
  clear: both;
}

body {
  font-family: "adobe-garamond-pro",serif;
  font-size: 100%;
  color: #4B4B4B;
  height: 100%;

}

header {
  height: 100%;
  width: 100%;
}
.background {
  border: solid 1em #D1B471;
}

h1 {
  font-family: "eurostile-extended",sans-serif;
  font-weight: 900;
  font-size: 4em; /* 64 / 16 = 6 */
}

h2, h3, h4, h5 {
  font-family: "eurostile",sans-serif;
  text-transform: uppercase;
  font-weight: 900;
}

h2 {
  font-size: 2em; /* 44/16 = 2.75em */
}

h4 {
  font-size: 1.125em /* 18/16 = 1.125em */
}

p {
  line-height: 1.5em; /* 24/16 = 1.5em */
}

img {
  max-width: 100%;
  height: auto;
}

/* parallax */
.parallax-bg {
  transition: initial;
}

/* header */
.hero {
  background-image: url("../images/homepage/DialecticJumbotron@2x.jpg");
  position: relative;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 100%;

  /* -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover; */
}
.hero-text {
  text-shadow: 0 4px 4px rgba(0,0,0,0.5);
  position: absolute;
  left: 0;
  top: 40%;
  width: 100%;
  text-align: center;
  color: #000;

}

/* colors */
.white {
  color: #FFFFFF;
}
.black {
  color: #4B4B4B;
}
.gold {
  color: #D1B471;
}
.purple {
  color: #9013FE;
}
.blue {
  color: #1893E7;
}

/* content sections */

.main {
  width: 80%; 
  margin: 0 auto;
  background-color: #FFFFFF;
}

.content-section {
  min-height: 100%;
  padding: 4.25em 0;
}

.content-section h2 {
  margin-top: 1.5em;
  margin-bottom: 1em;
}

.content-section h4 {
  margin-bottom: 1em;
}

.content-right {
  width: 40.17094017%; /* 470/1170 = 0.4017094017 */
  /* display: inline-block; */
  float: right;
}

/* why won't this float left? */
.content-left {
  width: 40.17094017%;  /* 470/1170 = 0.4017094017 */
  float: left;
}

